# takeanote

./: .gitignore  CMakeLists.txt  README.md  requirments.txt
data/summaries/: summary.docx  summary.txt
data/transcripts/: raw_transcript.txt
src/: requirements.txt  run.py
src/app/: .env  __init__.py  quiz_generator.py  routes.py  summarization.py  transcription.py
src/data/summaries/: summary.docx  summary.txt
src/data/transcripts/: raw_transcript.txt
src/static/assets/CSS/: main.css
src/static/assets/js/: main.js
src/static/css/: styles.css
src/static/js/: scripts.js
src/templates/: index.html  quiz.html  results.html
